--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-NEXTAUTH_URL=https://e-commerce-json.vercel.app
+NEXTAUTH_URL=https://e-commerce-json-mcsv481n5-ahmedsamir122.vercel.app/
 # NEXTAUTH_URL=http://localhost:3000/login
 NEXTAUTH_SECRET= 'hhgfhkuyiuiy86y4tdfsfjdfjdgf'
